--- a/desktop2/style/style.css
+++ b/desktop2/style/style.css
@@ -1,22 +1,43 @@
+@font-face {
+  font-family: 'DMSans';
+  src: url('/fonts/DM_Sans/DMSans-Regular.ttf')  format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'DMSans';
+  src: url('/fonts/DM_Sans/DMSans-Medium.ttf')  format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'DMSans';
+  src: url('/fonts/DM_Sans/DMSans-Bold.ttf')  format('truetype');
+  font-weight: 700;
+}
+
 body {
-  font-family: "DM sans" sans-serif;
-  background-color: black;
+  font-family: "DMSans", sans-serif;
+  background-color: #171717;
   color: white;
-  cursor: url('/img/arrow.cur'), auto !important ;
 }
 .header {
   width: 100%;
 }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
 .menu2 {
   color: white;
   text-decoration: none;
   font-size: 20px;
   margin: 40px;
-  cursor: url('/img/help.cur'), auto !important;
 }
-a {
-  cursor: url('/img/help.cur'), auto !important;
-}
+
 .logo {
   position: absolute;
   font-size: 35px;
@@ -77,7 +98,7 @@ h1 {
   margin-left: 345px;
   font-size: 20px;
 }
-.photo {
+.photo {font-weight: 500;
   text-align: right;
   margin: 25px 100px;
 }
@@ -106,11 +127,32 @@ h1 {
 .names p {
   font-size: 20px;
 }
-.rectangle {
+
+
+.tecnologies {
   display: flex;
-  height: 280px;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 60px;
 }
+
+.tecnology {
+  flex-basis: 33%;
+  background-color: #212121;
+  padding: 35px 50px;
+}
+
+.tecnology--active {
+  border-bottom: 5px solid #27AE60;
+}
+
+.tecnology-name {
+  color: #535353;
+  font-size: 36px;
+  font-weight: 500;
+  margin: 30px 0 0 0;
+}
+
+
 .vector {
   padding: 5px 75px;
   margin: 50px;
@@ -141,55 +183,65 @@ h1 {
   text-align: center;
 }
 
-.form-input {
+.form-container {
   display: flex;
-  flex-direction: row;
-  margin-top: 45px;
+  flex-wrap: wrap;
+  max-width: 750px;
+  margin: 0 auto;
 }
 
-.form-input label {
-  flex: none;
-  display: block;
-  width: 125px;
-  font-weight: bold;
-  font-size: 1em;
+.form-container-row {
+  display: flex;
+  width: 100%;
+  margin-bottom: 50px;
 }
 
-.form-input #last-name, #Phone-number {
-  padding-right: 310px;
-  margin-left: 35px;
-  background-color: black;
+.form-container-row > * {
+  width: 50%;
+}
+
+.form-input,
+.form-input input,
+.form-input textarea {
+  width: 100%;
+}
+
+.form-input input:focus-visible,
+.form-input textarea:focus-visible {
+  outline: none;
+}
+
+.form-container-row .form-input:first-child {
+  margin-right: 18px;
+}
+
+.form-container-row .form-input:last-child {
+  margin-left: 18px;
+}
+
+.form-input input, .form-input textarea {
+  background-color: #171717;
   border: 0;
   border-bottom: solid 2px #4f4f4f;
-  color: gray;
-  cursor: url('/img/text.cur'), auto !important;
-}
-.form-input #name, #email {
-  padding-right: 310px;
-  margin-left: 260px;
-  background-color: black;
-  border: 0;
-  border-bottom: solid 2px #4f4f4f;
-  color: gray;
-  cursor: url('/img/text.cur'), auto !important;
+  color: #4F4F4F;
+  padding-bottom: 10px;
 }
 
-.form-input .input-control {
- padding-right: 810px;
- margin-left: 265px;
- padding-bottom: 100px;
- background-color: black;
- color: gray;
- border: solid 2px #4f4f4f;
- cursor: url('/img/text.cur'), auto !important;
+.form-input textarea {
+  min-height: 110px;
+  border: solid 2px #4f4f4f;
 }
+
+.form-submit {
+  display: flex;
+  justify-content: center;
+}
+
 #submit {
-  margin-left: 700px ;
   margin-top: 35px;
   padding: 10px;
   background-color: #27ae60;
   color: white;
-  cursor: url('/img/help.cur'), auto !important;
 }
 footer{
   text-align: center;
@@ -206,21 +258,6 @@ li :hover {
 }
 .botton2 :hover  {
   border: solid 2px blue;
-}
-.form-input .input-control:hover {
-  border: 2px solid blue;
-}
-.form-input #name:hover {
-  border-bottom: 2px solid blue;
-}
-.form-input #email:hover {
-  border-bottom: 2px solid blue;
-}
-.form-input #last-name:hover {
-  border-bottom: 2px solid blue;
-}
-.form-input #Phone-number:hover {
-  border-bottom: 2px solid blue;
 }
 #submit:hover {
   border: solid 2px blue;
