--- a/cuda/style/style.css
+++ b/cuda/style/style.css
@@ -52,6 +52,13 @@ body {
   display: grid;
   background: #17c2a4;
 }
+.line {
+  position: absolute;
+  border-bottom: solid 5px #14a58c;  
+  width: 100px;
+  margin-left: 705px;
+  margin-top: 80px;
+}
 .services-h2 {
   text-align: center;
   font-size: 40px;
@@ -59,8 +66,13 @@ body {
 .services-p {
   text-align: center;
   font-size: 18px;
+  margin-bottom: 60px;
+  margin-top: 0px;
 }
 .contacts {
   display: flex;
   justify-content: center;
+  gap: 110px;
+  text-align: center;
+
 }
