--- a/cuda/style/style.css
+++ b/cuda/style/style.css
@@ -1,5 +1,6 @@
 body {
   color: #ffffff;
+  font-family: 'Titillium Web';
 }
 .container-header {
   display: grid;
@@ -18,7 +19,8 @@ body {
   color: #d9d9d9;
   text-decoration: none;
   font-size: 15px;
-  margin: 25px;
+  padding: 15px 25px;
+  border-radius: 10px;
 }
 .menu {
   text-align: right;
@@ -57,7 +59,7 @@ body {
   border-bottom: solid 5px #00000021;
   width: 100px;
   margin-left: 705px;
-  margin-top: 80px;
+  margin-top: 85px;
 }
 .services-h2 {
   text-align: center;
@@ -197,4 +199,123 @@ body {
   text-align: center;
   font-size: 18px;
   margin-top: -10px;
+}
+.container--people {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1100px;
+  margin: 80px auto;
+  margin-left: 215px;
+}
+.container--people-row {
+  display: flex;
+  margin-bottom: 50px;
+  gap: 115px;
+}
+.container--people .container--people-row:first-child {
+  gap: 80px;
+}
+.people-p {
+  float: right;
+  margin-left: 50px;
+  font-size: 20px;
+}
+.people-h2 {
+  text-align: center;
+  font-size: 25px;
+}
+.people-p-orange {
+  text-align: center;
+  font-size: 18px;
+  color: #ffdd99;
+  margin-top: -25px;
+}
+.form-container {
+  display: grid;
+  background: #3c5499;
+}
+.form-h2 {
+  text-align: center;
+  font-size: 40px;
+}
+.form-p {
+  text-align: center;
+  font-size: 18px;
+  margin-top: -10px;
+}
+form {
+  max-width: 850px;
+  margin: 0 auto;
+  margin-top: 65px;
+}
+.form-container-inline {
+  display: flex;
+  width: 100%;
+  margin-bottom: 25px;
+}
+.form-input input:focus-visible,
+.form-input textarea:focus-visible {
+  outline: none;
+}
+.form-container-inline .form-input:first-child {
+  margin-right: 16px;
+}
+
+.form-container-inline .form-input:last-child {
+  margin-left: 16px;
+}
+.form-input input,
+.form-input textarea {
+  background-color: #273a71;
+  border: 0;
+  color: #ffffff;
+  padding-bottom: 10px;
+  padding-right: 245px;
+  min-height: 30px;
+}
+.form-input textarea {
+  min-height: 175px;
+  padding-left: 443px;
+}
+.form-submit {
+  display: flex;
+  justify-content: center;
+}
+#submit {
+  color: #ffffff;
+  background: #30bae7;
+  padding: 20px 65px;
+  border-radius: 5px;
+  border: 0;
+  border-bottom: 4px solid #299ec5;
+  margin-top: 50px;
+  margin-bottom: 100px;
+  
+}
+.container-footer {
+  display: grid;
+  background: #344b8e;
+}
+footer {
+  text-align: center;
+  margin-top: 35px;
+  margin-bottom: 30px;
+}
+.footer {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 25px;
+  margin: 35px;
+}
+.menu2:hover {
+  background-color: #87509C;
+  border-left: 1px solid rgba(0, 0, 0, 0.176);
+  border-right: 1px solid rgba(0, 0, 0, 0.176);
+  border-bottom: 5px solid rgba(0, 0, 0, 0.176);
+}
+.categories1:hover {
+  background-color: #ffffff;
+}
+.footer:hover {
+  color: #30bae7;
 }
